syntax = "proto3";

package onight.zjfae.afront.gens;

//获取职业信息CareerEnumTypeCom
option java_outer_classname="CareerEnumTypeCom";
//Generated By BrewRobot:Wed May 11 15:43:36 CST 2016

message PBIFE_userbaseinfo_getEnumTypeCom{

	repeated string enumTypeComList =1;

	message EnumData{
		string  enumName=1;
	}

	repeated EnumData enumDatas=2;
}

message Ret_PBIFE_userbaseinfo_getEnumTypeCom{

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_userbaseinfo_getEnumTypeCom data=3;


}

message REQ_PBIFE_userbaseinfo_getEnumTypeCom{

	string type = 1; //枚举类型 type=‘zy’

}