syntax = "proto3";

package onight.zjfae.afront.gens;

option java_outer_classname="UpdateProfession";
//Generated By BrewRobot:Wed May 11 15:43:36 CST 2016

message PBIFE_userinfomanage_updateProfession{

}

message Ret_PBIFE_userinfomanage_updateProfession{

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_userinfomanage_updateProfession data=3;


}

message REQ_PBIFE_userinfomanage_updateProfession{

	string profession = 1; //职业枚举中文

	string account = 2; //用户账号

}